--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
                 android:layout_marginEnd="2sp"
                 android:background="@color/colorPrimary"
                 android:drawableTop="@drawable/ic_add_black_24dp"
-                android:onClick="createNewTextFile"
+                android:onClick="button_toolbar_new__click"
                 android:text="New"
                 app:layout_constraintStart_toEndOf="@+id/button_new"
                 app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +92,7 @@
                 android:layout_marginEnd="2sp"
                 android:background="@color/colorPrimary"
                 android:drawableTop="@drawable/ic_timer_black_24dp"
-                android:onClick="click_btnTimestamp"
+                android:onClick="button_toolbar_timestamp__click"
                 android:text="Stamp"
                 app:layout_constraintEnd_toStartOf="@+id/button_save"
                 app:layout_constraintStart_toEndOf="@+id/button_new"
@@ -106,7 +106,7 @@
                 android:layout_marginEnd="2sp"
                 android:background="@color/colorPrimary"
                 android:drawableTop="@drawable/ic_save_black_24dp"
-                android:onClick="saveToFile"
+                android:onClick="button_toolbar_save__click"
                 android:text="Save"
                 app:layout_constraintStart_toEndOf="@+id/button_toolbar_new"
                 app:layout_constraintStart_toStartOf="parent"
@@ -119,7 +119,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
                 android:drawableTop="@drawable/ic_fast_forward_black_24dp"
-                android:onClick="click_endOfFileButton"
+                android:onClick="button_toolbar_endoftext__click"
                 android:text="EOF"
                 app:layout_constraintStart_toEndOf="@+id/button_toolbar_save"
                 app:layout_constraintStart_toStartOf="parent"
