--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10sp"
         android:text="No Text File Loaded"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Title"
         android:textColor="@color/colorPrimaryDark"
@@ -31,18 +30,26 @@
         android:layout_centerHorizontal="true"
         android:text="TextView"
         android:textSize="8sp"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:layout_width="350sp"
+        android:layout_height="2dip"
+        android:layout_below="@+id/debug_text"
+        android:layout_centerHorizontal="true"
+        android:background="@color/colorAccent" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/debug_text"
-        android:layout_marginTop="14dp"
+        android:layout_alignTop="@+id/debug_text"
         android:layout_marginBottom="30dp"
+        android:layout_marginTop="2dip"
         android:layout_toEndOf="@id/toolbar3"
         android:ems="10"
         android:inputType="textMultiLine"
@@ -70,57 +77,80 @@
             android:elevation="4dp"
             android:orientation="horizontal">
 
-            <Button
+            <ImageButton
                 android:id="@+id/button_toolbar_new"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="2sp"
                 android:background="@color/colorPrimary"
-                android:drawableTop="@drawable/ic_add_black_24dp"
                 android:onClick="button_toolbar_new__click"
+                android:src="@drawable/ic_add_black_24dp"
                 android:text="New"
+                android:tint="@android:color/primary_text_dark"
                 app:layout_constraintStart_toEndOf="@+id/button_new"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="parent" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/button_toolbar_timestamp"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_marginEnd="2sp"
                 android:background="@color/colorPrimary"
-                android:drawableTop="@drawable/ic_timer_black_24dp"
                 android:onClick="button_toolbar_timestamp__click"
+                android:src="@drawable/ic_timer_black_24dp"
                 android:text="Stamp"
+                android:tint="@android:color/primary_text_dark"
                 app:layout_constraintEnd_toStartOf="@+id/button_save"
                 app:layout_constraintStart_toEndOf="@+id/button_new"
                 app:layout_constraintTop_toBottomOf="@+id/editText" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/button_toolbar_save"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_marginEnd="2sp"
                 android:background="@color/colorPrimary"
-                android:drawableTop="@drawable/ic_save_black_24dp"
                 android:onClick="button_toolbar_save__click"
+                android:src="@drawable/ic_save_black_24dp"
                 android:text="Save"
+                android:tint="@android:color/primary_text_dark"
                 app:layout_constraintStart_toEndOf="@+id/button_toolbar_new"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="parent" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/button_toolbar_endoftext"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:background="@color/colorPrimary"
-                android:drawableTop="@drawable/ic_fast_forward_black_24dp"
                 android:onClick="button_toolbar_endoftext__click"
+                android:src="@drawable/ic_last_page_black_24dp"
                 android:text="EOF"
+                android:tint="@android:color/primary_text_dark"
+                app:layout_constraintStart_toEndOf="@+id/button_toolbar_save"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="parent" />
+
+            <ImageButton
+                android:id="@+id/button_toolbar_refreshtext"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@color/colorPrimary"
+                android:onClick="button_toolbar_refreshtext__click"
+                android:src="@drawable/ic_refresh_black_24dp"
+                android:text="Refresh Text"
+                android:tint="@android:color/primary_text_dark"
                 app:layout_constraintStart_toEndOf="@+id/button_toolbar_save"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="parent" />
