--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -18,6 +18,11 @@
         android:icon="@drawable/ic_color_lens_black_24dp"
         android:title="Color" />
 
+    <item
+        android:id="@+id/menuitem_resetText"
+        android:icon="@drawable/ic_refresh_black_24dp"
+        android:title="Reset" />
+
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/menuitem_settings"
         android:title="Settings" />
