--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,8 @@
     <color name="colorRedLight">#ff4444</color>
     <color name="colorPurpleLight">#aa66cc</color>
 
+    <color name="colorText">#222</color>
+    <color name="colorTextLight">#eee</color>
+
     <color name="color">#000</color>
 </resources>
