[+] File Selection Functionality
+ New spinner (dropdown) that gives list of all files in the DD dir
+ onSelected() event listener for setting file to load
+ onNothingSelected() listener simply there to allow use of onItemSelected() by matching signature of the object that is being implemented
+ New MainActivity properties for better code organization and future editing, such as file names, directory name, view items from XML
~ Edited references to point to new properties
+ New setters for nullable view items in onCreate(), each call needs not null evaluation (_myPrivatePropFromView\!\!).androidProp...
Updated to v2.2, though I feel uneasy about how complete it is

[jspann]

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,8 @@
         android:layout_height="2dip"
         android:layout_below="@+id/debug_text"
         android:layout_centerHorizontal="true"
-        android:background="@color/colorAccent" />
+        android:background="@color/colorAccent"
+        android:id="@+id/view" />
 
     <EditText
         android:id="@+id/editText"
@@ -157,4 +158,13 @@
 
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editText"
+        android:layout_toStartOf="@+id/textView_Title"
+        android:spinnerMode="dialog" />
+
 </RelativeLayout>
