--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,47 +1,66 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <SwitchPreference
-        android:defaultValue="true"
-        android:key="example_switch"
-        android:summary="@string/pref_description_social_recommendations"
-        android:title="@string/pref_title_social_recommendations" />
-    <SwitchPreference
-        android:defaultValue="true"
-        android:key="pref_autosave"
-        android:summary="@string/pref_description_autosave"
-        android:title="Autosave" />
-    <EditTextPreference
-        android:defaultValue="0"
-        android:inputType="number"
-        android:key="pref_autosave_number"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:title="Autosave after"
-        android:summary="Autosaves after this may characters are typed (assuming no reductions have been made to the file)"/>
+    <PreferenceCategory
+        android:title="Autosave"
+        android:key="pref_key_autosave_settings">
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="pref_autosave"
+            android:summary="@string/pref_description_autosave"
+            android:title="Autosave" />
+        <EditTextPreference
+            android:defaultValue="0"
+            android:inputType="number"
+            android:key="pref_autosave_number"
+            android:maxLines="1"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:title="Autosave after"
+            android:summary="Autosaves after this may characters are typed (assuming no reductions have been made to the file)"/>
+    </PreferenceCategory>
 
-    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
+    <PreferenceCategory
+        android:title="Logging"
+        android:key="pref_key_logging_settings">
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="pref_autolog_calls"
+            android:summary="Auto-logs incoming and outgoing calls"
+            android:title="Auto-Log Calls" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="Files"
+        android:key="pref_key_files_settings">
+        <!--ListPreference
+            android:defaultValue="-1"
+            android:entries="@array/pref_example_list_titles"
+            android:entryValues="@array/pref_example_list_values"
+            android:key="pref_default_file"
+            android:negativeButtonText="@null"
+            android:positiveButtonText="@null"
+            android:title="Default File" /-->
+        <ListPreference
+            android:defaultValue="-1"
+            android:entries="@array/pref_example_color_titles"
+            android:entryValues="@array/list_preference_color_values"
+            android:key="pref_app_color"
+            android:negativeButtonText="@null"
+            android:positiveButtonText="@null"
+            android:title="App Color" />
+    </PreferenceCategory>
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
-    <EditTextPreference
-        android:capitalize="words"
-        android:defaultValue="@string/pref_default_display_name"
-        android:inputType="textCapWords"
-        android:key="example_text"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:title="@string/pref_title_display_name" />
 
     <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
          dismiss it. -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-    <ListPreference
+    <!--ListPreference
         android:defaultValue="-1"
         android:entries="@array/pref_example_list_titles"
         android:entryValues="@array/pref_example_list_values"
         android:key="example_list"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
-        android:title="@string/pref_title_add_friends_to_messages" />
+        android:title="@string/pref_title_add_friends_to_messages" /-->
 
 </PreferenceScreen>
