[~] MainActivity Sets Color For File if Shared Prop Exists
@ BUGGY @
+ Blank Color for icon buttons
+ Organization of color setting/selecting code into standalone fn()
~ Code cleaup of Config()

* BUG  IS DESPITE SELECTING FILES, IT ALWAYS REVERTS TO THE LATEST FILE*

[jspann]

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="2sp"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorNone"
                 android:onClick="button_toolbar_new__click"
                 android:src="@drawable/ic_add_black_24dp"
                 android:text="New"
@@ -111,7 +111,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_marginEnd="2sp"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorNone"
                 android:onClick="button_toolbar_timestamp__click"
                 android:src="@drawable/ic_timer_black_24dp"
                 android:text="Stamp"
@@ -127,7 +127,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_marginEnd="2sp"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorNone"
                 android:onClick="button_toolbar_save__click"
                 android:src="@drawable/ic_save_black_24dp"
                 android:text="Save"
@@ -142,7 +142,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorNone"
                 android:onClick="button_toolbar_endoftext__click"
                 android:src="@drawable/ic_last_page_black_24dp"
                 android:text="EOF"
@@ -157,7 +157,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorNone"
                 android:onClick="button_toolbar_refreshtext__click"
                 android:src="@drawable/ic_refresh_black_24dp"
                 android:text="Refresh Text"
