[v2.3.4] Full Color Setting Functionality
~ Code cleanup all around
+ Code to reset colors
+ Default button to remove color presets
+ Dynamic code that darkens the accent color based off of chosen color

[jspann]

--- a/app/src/main/res/layout/activity_color_selector.xml
+++ b/app/src/main/res/layout/activity_color_selector.xml
@@ -137,4 +137,16 @@
         app:layout_constraintStart_toEndOf="@+id/btn_green_light"
         app:layout_constraintTop_toBottomOf="@+id/btn_blue_dark" />
 
+    <Button
+        android:id="@+id/btn_default"
+        android:layout_width="92dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
+        android:text="Default"
+        android:textColor="#fff"
+        app:layout_constraintStart_toEndOf="@+id/btn"
+        app:layout_constraintTop_toBottomOf="@+id/btn_putple_light" />
+
 </android.support.constraint.ConstraintLayout>
