--- a/app/src/main/res/layout/activity_color_selector.xml
+++ b/app/src/main/res/layout/activity_color_selector.xml
@@ -141,12 +141,10 @@
         android:id="@+id/btn_default"
         android:layout_width="92dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary"
-        android:text="Default"
-        android:textColor="#fff"
-        app:layout_constraintStart_toEndOf="@+id/btn"
-        app:layout_constraintTop_toBottomOf="@+id/btn_putple_light" />
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:text="None"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
