--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,9 @@
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toStartOf="@id/toolbar3"
         app:layout_constraintHorizontal_bias="0.533"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        />
+        <!--android:textCursorDrawable="@null"/>-->
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar3"
