--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,8 @@
         app:layout_constraintEnd_toStartOf="@id/toolbar3"
         app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
+        android:maxLines = "10"
+        android:scrollbars = "vertical"
         />
         <!--android:textCursorDrawable="@null"/>-->
 
@@ -103,6 +105,21 @@
                 android:text="New"
                 android:tint="@android:color/primary_text_dark"
                 app:layout_constraintStart_toEndOf="@+id/button_new"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="parent" />
+
+            <ImageButton
+                android:id="@+id/button_toolbar_mdDream"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@color/colorNone"
+                android:onClick="button_toolbar_mdDream__click"
+                android:src="@drawable/ic_brightness_3_black_24dp"
+                android:text="Refresh Text"
+                android:tint="@android:color/primary_text_dark"
+                app:layout_constraintStart_toEndOf="@+id/button_toolbar_save"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="parent" />
 
