--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -3,5 +3,6 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="5dp">
+    android:padding="15sp"
+    android:textSize="18sp">
 </TextView>
